# Car2024_Synthetical_Example_v1.1

./: .editorconfig  .gitignore  build.gradle  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/res/layout/: picinformation_fragment.xml
device/: build.gradle
device/src/androidTest/java/com/til/device/: ExampleInstrumentedTest.java
device/src/main/java/com/til/device/: DeviceBase.java  Devices.java  TrafficLight.java
device/src/test/java/com/til/device/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
ocr/: build.gradle
ocr/src/main/: AndroidManifest.xml
ocr/src/main/cpp/: CMakeLists.txt
ocr/src/main/java/com/benjaminwan/ocrlibrary/: OcrEngine.java  OcrFailed.java  OcrOutput.java  OcrResult.java  OcrStop.java  Point.java  TextBlock.java
ocr/src/main/ncnn/x86/include/ncnn/: platform.h
openCVLibrary343/: build.gradle
openCVLibrary343/src/main/java/org/opencv/android/: AsyncServiceHelper.java  (+2 more)
problem/: build.gradle
problem/src/main/: AndroidManifest.xml
service/: AndroidManifest.xml  build.gradle
service/src/main/: AndroidManifest.xml
util/: build.gradle
util/src/main/: AndroidManifest.xml
yolov8Module/: build.gradle
yolov8Module/src/main/assets/: classes.txt  yolov8ShapeAndColor.param  yolov8TrafficSign.param  yolov8cxm.param  yolov8kz.param  yolov8n.param
yolov8Module/src/main/java/com/yolov8ncnn/: IItem.java  IModel.java  Yolov8Ncnn.java
yolov8Module/src/main/java/util/: LicensePlatRecognition.java
yolov8Module/src/main/java/yolov8ncnn/: MainActivity.java  Yolov8Ncnn.java
yolov8Module/src/main/jni/: CMakeLists.txt  ndkcamera.cpp  ndkcamera.h  yolo.cpp  yolo.h  yolov8ncnn.cpp
yolov8Module/src/main/jniLibs/com/car2024/: HSVbeen.java
yolov8ncnn/: .gitignore
yolov8ncnn/src/main/assets/: best-int8.tflite  biaozhiwu.tflite  biaozhiwu.txt  chexing.tflite  chexing.txt  classes.tflite  predefined_classes.txt  xingren.tflite  xingzhuang.tflite  xingzhuang.txt  yolov5s.param  yolov8Card.param  yolov8_mask.param  yolov8_shape_and_color.param  yolov8_traffic_light.param  yolov8_traffic_sign.param  yolov8_vehicle.param  yolov8cx.param  yolov8s.param
yolov8ncnn/src/main/java/com/yolov8ncnn/: IItem.java  IModel.java  Yolov8Ncnn.java
yolov8ncnn/src/main/java/util/: LicensePlatRecognition.java
yolov8ncnn/src/main/jni/: CMakeLists.txt  ndkcamera.cpp  ndkcamera.h  yolo.cpp  yolo.h  yolov8ncnn.cpp  yolov8ncnn.h
(+343 files in other folders)
